# tapi

./: CMakeLists.txt
include/tapi/Core/: ClangDiagnostics.h  InterfaceFile.h  MachODylibReader.h  MachOReader.h  Path.h  Registry.h  TextStubCommon.h  Utils.h  XPI.h  XPISet.h  YAMLReaderWriter.h
include/tapi/Driver/: Configuration.h  ConfigurationFile.h  Options.h
lib/Core/: Registry.cpp  TextStubCommon.cpp  Utils.cpp
lib/Diagnostics/: Diagnostics.cpp
lib/Driver/: ArchiveDriver.cpp  GenerateAPITestsDriver.cpp  InstallAPIDriver.cpp  Options.cpp  SDKDBDriver.cpp  Snapshot.cpp
lib/Frontend/: APIVisitor.cpp  APIVisitor.h
tools/: CMakeLists.txt
tools/libtapi/: CMakeLists.txt
tools/tapi/: CMakeLists.txt
tools/tapi-run/: CMakeLists.txt  tapi-run.cpp
unittests/: CMakeLists.txt
